@@ -1,3 +1,8 @@
+2013-02-05  David Grellscheid  <David.Grellscheid@durham.ac.uk>
+
+	* include/Rivet/Math/MathUtils.hh: added BWspace bin edge method
+	to give equal-area Breit-Wigner bins
+
 2013-02-01  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding an element to the PhiMapping enum and a new mapAngle(angle, mapping) function.
